--- a/tba/index.html
+++ b/tba/index.html
@@ -21,7 +21,7 @@
                 <i class="fa fa-play-circle"></i>
                 <span class="text">Fragmanı izle</span>
             </a>
-            <a href="#" id="download-games" class="download-games">
+            <a href="The By Ankara.apk" id="download-games" class="download-games">
                 <i class="fa fa-android"></i>
                 <span class="text">Beta Sürümünü İndir</span>
             </a>
