--- a/tba/index.html
+++ b/tba/index.html
@@ -21,7 +21,7 @@
                 <i class="fa fa-play-circle"></i>
                 <span class="text">Fragmanı izle</span>
             </a>
-            <a href="The By Ankara.apk" id="download-games" class="download-games">
+            <a href="https://download1474.mediafire.com/ak0b1te8sutgbdFaO2VQFkC8vhEi_aHQKk2X_HOWJpDjDxSidcknZ5xgAWZ0w_dSXEWqo49mX8D5Z9uqPlMRPSrpoG1V3ELCJu00NIREcafZSE6_eKiiMjPs6vRVOJ_OtDiY-ohsktkZoha-QTIPrW--WH9jBki_9gdYvG6HQaoh4A/i0ahl7dar79ajxp/The+By+Ankara.apk" id="download-games" class="download-games">
                 <i class="fa fa-android"></i>
                 <span class="text">Beta Sürümünü İndir</span>
             </a>
